# meshcadet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  cliff.toml  release-please-config.json  release-plz.toml  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml  commitlint.yml  pages-check.yml  pages-deploy.yml  pages.yml  release-please.yml  release-plz.yml  release.yml
docs/: hil-real-mesh-procedure.md  release-reproducibility.md
docs/adr/: 0001-charter.md  0002-provisioning-wire-format.md  0003-ui-toolkit.md  0004-release-architecture.md  0005-firmware-core-extraction.md  0006-web-flasher.md  0007-provisioner-codec.md  0008-nondestructive-update-artifacts.md  0009-two-path-flasher.md  0010-signal-meter.md  0011-unified-esptool-js-flasher.md  README.md
docs/licensing/: DEPENDENCY-AUDIT.md  DejaVuSans-LICENSE.txt  THIRD-PARTY-LICENSES.md
docs/perf/: ui-perf-baseline.md
firmware/: Cargo.toml  build.rs  check-all-features.sh  gen_emoji_font.c  layout-baseline.txt  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
firmware-core/: Cargo.toml
firmware-core/src/: advert.rs  battery.rs  dispatcher.rs  gps.rs  lib.rs  notification.rs  pin_menu.rs  runtime_settings_store.rs  signal_tracker.rs
firmware-core/src/ui/: admin_menu.rs  buzzer.rs  compose.rs  contact_list.rs  gps_status.rs  keyboard.rs  message_view.rs  mod.rs  signal_meter.rs  splash.rs  theme.rs  touch.rs
firmware/.cargo/: config.toml
firmware/assets/: NotoEmoji-LICENSE.txt
firmware/assets/space/: generate_assets.py
firmware/release-container/: Dockerfile  build.sh  generate-update-meta.sh  generate-update-meta.test.sh
firmware/scripts/: flash-with-partition-table.sh
firmware/src/: admin_server.rs  advert_ts_store.rs  battery.rs  config_store.rs  dispatcher.rs  gps.rs  gps_baud_store.rs  hil_keys.example.rs  history_store.rs  identity_store.rs  main.rs  pin_menu.rs  provisioning_server.rs  radio.rs  runtime_settings_store.rs  serial_console.rs  signal_tracker.rs
firmware/src/ui/: display.rs  keyboard.rs  mod.rs  motifs.slint  notification.rs  platform.rs  signal_meter.slint  theme.rs  theme.slint  touch.rs  trackball.rs
firmware/src/ui/screens/: admin_menu.rs  compose.rs  contact_list.rs  gps_status.rs  message_view.rs  mod.rs  pin_entry.rs  splash.rs  unprovisioned.rs
host/: Cargo.toml
host/src/: history_format.rs  lib.rs  main.rs  session.rs  transport.rs
host/tests/: integration.rs
protocol/: Cargo.toml
protocol/src/: advert.rs  codec.rs  crypto.rs  dedup.rs  emoji.rs  header.rs  history.rs  history_region.rs  identity.rs  lib.rs  mention.rs  policy.rs  provisioning.rs  staging.rs  telemetry.rs
protocol/tests/: tx_frame_wire.rs
scripts/: check-commit-format.sh  check-commit-format.test.sh  sync-cargo-lock-versions.sh  sync-cargo-lock-versions.test.sh
site/: README.md  flash-image-encoding.js  flash-image-encoding.test.mjs  flash-manifest.js  flash-manifest.test.mjs  flash.html  flash.js  index.html  provisioner.html  provisioner.js  styles.css  upgrade-gate.js  upgrade-gate.test.mjs
site/provisioner/: codec.conformance.test.mjs  codec.js  contact-uri.js  contact-uri.test.mjs  history-format.js  history-format.test.mjs  session.js  session.smoke.test.mjs  validation.js  validation.test.mjs
ui_perf/: Cargo.toml  README.md  build.rs
ui_perf/src/: counting_alloc.rs  lib.rs  render_logic.rs
ui_perf/tests/: alloc_tick_dedup.rs  entry_fade_repaint.rs  flush_line_alloc.rs  model_update_repaint.rs  motif_repaint.rs
ui_sim/: Cargo.toml  README.md  build.rs
ui_sim/src/: alloc_count.rs  compose_promo.rs  compose_send.rs  contact_badges.rs  contact_list_promo.rs  gps_status_rows.rs  lib.rs  list_pane_backdrop.rs  main.rs  message_view_promo.rs  motif_library.rs  perf_profile.rs  signal_meter.rs  splash_lineart.rs  splash_promo.rs
ui_sim/tests/: compose_promo.rs  compose_send.rs  contact_badges.rs  contact_list_promo.rs  contact_list_promo_meter_position.rs  gps_status_rows.rs  list_pane_backdrop.rs  message_view_promo.rs  motif_library.rs  perf_profile.rs  signal_meter.rs  space_backdrop.rs  splash_lineart.rs  splash_promo.rs
xtask/: Cargo.toml
xtask/src/: golden.rs  lib.rs  main.rs
