# MeshCadet Cargo workspace.
#
# Several host-native crates live in this workspace; the firmware crate is a
# DETACHED workspace (it declares its own `[workspace]` table in
# firmware/Cargo.toml) because it cross-compiles for ESP32-S3 / Xtensa under
# the `esp` toolchain and the esp-idf (std) sysroot. Keeping it out of the
# root member set means `cargo build` / `cargo test` from the repo root only
# touches this workspace's root members and stays buildable on stable rustc
# with no espup / ESP-IDF installed.
#
#   cargo test                 # root workspace (stable, native)
#   cd firmware && cargo build # firmware (esp toolchain, xtensa-esp32s3-espidf)
#
# `firmware-core` is pure Rust, `std`, depending only on `protocol` — the
# decoupled, host-testable half of firmware logic that has no `esp-idf-*`/
# Slint dependency (dispatcher/dedup, PIN-menu, notification model, GPS/
# battery/runtime-settings pure parsing+codecs, …). It follows the exact
# pattern `protocol` already uses: a root-workspace member that is ALSO a
# `path` dependency of the detached `firmware` crate below, so it compiles
# for both host (tests execute here) and xtensa (as a firmware dependency).
# `firmware/src/<module>.rs` re-consumes each moved module via a thin
# `pub use firmware_core::<module>::*;` shim. See
# `docs/adr/0005-firmware-core-extraction.md`.
#
# `xtask` is the host-side glyph-coverage verification harness: it statically
# scans `firmware/src/ui/screens/*.rs` for every (codepoint, font-size) pair
# used in a Slint literal and cross-checks it against the frozen icon
# inventory in `firmware/gen_emoji_font.c`, turning the historically silent
# "blank glyph on real hardware" defect class into a `cargo test` failure.
# See `xtask/src/lib.rs` for the full design doc.
#
# `ui_sim` is the host-native render rig for the firmware's image-asset
# pipeline: firmware can't be exercised on host (see above), so this crate
# links plain `slint` (software-renderer only) and proves, on the host, that
# both the primary (`@image-url` + `SLINT_EMBED_RESOURCES=embed-for-software-
# renderer`) and fallback (build.rs RGB565 byte array + `SharedPixelBuffer`)
# asset-embed paths actually render pixels. See `ui_sim/src/lib.rs` for the
# full design doc and `ui_sim/README.md` for the reproduction/evidence
# summary.
#
# `ui_perf` is the host-native measurement harness for the UI performance
# work: firmware's render/state-build hot paths can't be EXECUTED on host
# either (the firmware crate's `[[bin]]` sets `harness = false`, so its own
# `#[cfg(test)]` blocks type-check but never run on host — see
# `firmware/src/ui/mod.rs`'s "Tests" section doc), so this crate ports the
# pure logic (no Slint/esp-idf types involved) and pins it against the SAME
# fixture values firmware's own tests use. See `docs/perf/ui-perf-
# baseline.md` for the full methodology + ledger.
[workspace]
resolver = "2"
members = ["protocol", "firmware-core", "host", "xtask", "ui_sim", "ui_perf"]

[workspace.package]
edition = "2021"
# GPLv3 (see LICENSE at repo root + docs/licensing/DEPENDENCY-AUDIT.md): the
# firmware crate reaches into `i-slint-core` internals (RendererSealed et al),
# and GPL-3.0-only is the license Slint offers for that with no separate
# royalty/registration agreement required.
license = "GPL-3.0-only"
publish = false
# ONE project-wide version for every crate in this workspace (see
# docs/adr/0004-release-architecture.md). release-please manages this field —
# it opens a "chore(release): vX.Y.Z" PR that bumps it here and every member
# below inherits it via `version.workspace = true`. The DETACHED `firmware`
# workspace (see firmware/Cargo.toml's own `[workspace]` doc) cannot be
# reached by workspace inheritance across the boundary, so its version is
# a separate hardcoded literal, bumped in the same PR via release-please's
# `extra-files` config, kept honest by CI's version-drift guard
# (see .github/workflows/ci.yml's `version-drift-guard` job).
version = "0.4.1"

[workspace.dependencies]
# No `version` field: nothing in this repo's toolchain runs `cargo package`
# or `cargo publish` against this workspace (release-please, which manages
# `[workspace.package].version`, is pure git/GitHub-API/text-manifest
# automation with no cargo invocation at all — see
# docs/adr/0004-release-architecture.md §2). A prior release-plz-based setup
# needed `version = "*"` here solely to satisfy `cargo package`'s manifest
# verification ("all dependencies must have a version requirement specified
# when packaging"), and that requirement turned out to be actively
# dangerous, not just cosmetic: `cargo package`'s verify-build resolves a
# `path` dependency's version requirement against the REAL crates.io index,
# and `protocol` collides with an unrelated real crate of the same name
# there (crates.io has a `protocol` package independent of this one) — `"*"`
# silently satisfied that unrelated crate instead of failing, and any
# workspace member's verify-build that actually depended on `protocol`
# failed to compile against it.
protocol = { path = "protocol" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 2

[profile.dev]
opt-level = 1
debug = 2
