[package]
name = "host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "MeshCadet admin CLI — USB-serial provisioning, identity readout, history export, PIN reset."

[[bin]]
name = "meshcadet"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Error plumbing
anyhow = "1"
# Hex pubkey / secret decoding from CLI args
hex = "0.4"
# USB-serial transport (libudev feature disabled — we open by path, no port enumeration)
serialport = { version = "4", default-features = false }
# Terminal QR rendering for the MeshCore identity URI (default features off:
# we only use the built-in unicode renderer, not the image/svg/pic backends).
qrcode = { version = "0.14", default-features = false }
# Local-time rendering for export-history timestamps (std alone can't resolve
# the local timezone offset).
chrono = "0.4"

[dev-dependencies]
# Signature verification for the advert-card integration tests (mirrors
# `protocol`'s own use of this crate for its golden-vector/round-trip tests).
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
